--- a/src/main/resources/sample.firebird.properties
+++ b/src/main/resources/sample.firebird.properties
@@ -1,6 +1,6 @@
 # General Driver and connection parameters
 #
-# db={ postgres | oracle | firebird | mariadb | transact-sql }
+# db={ postgres | oracle | firebird | mariadb | transact-sql | ase | hana | hana-col }
 # driver=<JDBC_DRIVER_CLASS>
 # application={ Generic | PostgreSQLStoredProc | OracleStoredProc }
 # conn=<JDBC_URI>
