--- a/src/main/resources/sample.hana-col.properties
+++ b/src/main/resources/sample.hana-col.properties
@@ -6,10 +6,10 @@
 # conn=<JDBC_URI>
 # user=<USERNAME>
 # password=<PASSWORD>
-db=postgres
-driver=org.postgresql.Driver
+db=hana-col
+driver=com.sap.db.jdbc.Driver
 application=Generic
-conn=jdbc:postgresql://localhost:5432/postgres
+conn=jdbc:sap://localhost:30015?currentschema=benchmarksql
 user=benchmarksql
 password=PWbmsql
 
